<resources>
    <string name="app_name">Bitcoin-Ticker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="register_information_message">You can immediately enter your e-mail address and start using it.</string>
    <string name="login">Login</string>
    <string name="you_already_have_an_account">You already have an account.</string>
    <string name="new_account_login_text">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account_message">Don\'t you have an account</string>
    <string name="password_rules_one">Your password must contain at least one capital letter.</string>
    <string name="password_rules_two">Your password must contain at least one lowercase letter.</string>
    <string name="password_rules_three">Your password must contain at least one number.</string>
    <string name="password_rules_four">Your password must be at least 8 characters.</string>
    <string name="favorite_coins">Favorite Coins</string>
    <string name="profile">Profile</string>
    <string name="coins">Coins</string>

    <string name="success_register">Account successfully created</string>
    <string name="failure_register">Something went wrong. User registration failed.</string>
    <string name="user_already_exists">Email already exist, you can try signing in with this email.</string>
    <string name="login_failed">Something went wrong. Login failed.</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="success_login">Successfully Logged In</string>
    <string name="wrong_password">The password you entered is incorrect.\nPlease try again.</string>
    <string name="user_not_found">Could not find your Bitcoin Ticker account</string>
    <string name="network_connection_error">Couldn\'t reach server. Check your internet connection.</string>
    <string name="search">Search</string>
    <string name="refresh_time">Refresh Time</string>
    <string name="set_time">Set Time</string>
    <string name="hashing_algrotihm">Hashing Algrotihm</string>
    <string name="price_change_percetange_in_24_hours">Price Change Percetange in 24 hours</string>
    <string name="description">Description</string>
    <string name="empty_favorite_coins">No Favorite Coins Yet</string>
    <string name="search_empty_message">Search Result is Empty</string>
    <string name="add_favorite_message">Successfully added to favorites</string>
    <string name="remove_favorite_message">Successfully deleted from favorites</string>
</resources>